# particled

./: .gitignore  .pre-commit-config.yaml  .python-version  CHANGELOG.md  LICENSE  README.md  RELEASING.md  main.py  pyproject.toml  test.py
.github/workflows/: ci.yml  homebrew-smoke.yml  publish-pypi.yml  release-on-tag.yml
packaging/homebrew/: particled.rb
particled/: README.md  __init__.py  __main__.py  app.py  audio.py  cli.py  compat.py  config.py  logger.py  runtime.py
particled/visuals/: __init__.py  base.py  gl_renderer.py  imgui_overlay.py  overlay.py  param_panels.py  penrose.py  torus_knot.py
particled/visuals/particle_cloud/: __init__.py  base.py  gravitas.py  impact.py
scripts/: prepare_release_artifacts.sh
tests/: __init__.py  test_config_band_controls.py  test_main.py  test_param_panels_presets.py  test_particle_band_modulation.py
