[project]
name = "particled"
version = "0.1.0"
description = "A Black on White Sound-Interactive Particle Visualiser"
authors = [{ name = "Alaa", email = "self@alaa.sh" }]
readme = "README.md"
requires-python = ">=3.14,<4.0"
dependencies = [
    "numpy (>=2.3.5,<3.0.0)",
    "sounddevice (>=0.5.3,<0.6.0)",
    "inquirerpy (>=0.3.4,<0.4.0)",
    "glfw (>=2.7.0,<3.0.0)",
    "pillow (>=11.0.0,<12.0.0)",
    "moderngl (>=5.12.0,<6.0.0)",
    "imgui-bundle (>=1.92.700,<2.0.0)",
    "pyopengl (>=3.1.10,<4.0.0)",
]

[dependency-groups]
dev = [
    "ruff (>=0.14.8,<0.15.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "pre-commit (>=4.5.0,<5.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
select = [
    "D",    # docstring conventions
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "PL",   # PyLint
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "PERF", # perflint
    "RUF",  # ruff-specific
]
ignore = [
    "D203",  # Conflicts with D211 (no-blank-line-before-class)
    "D213",  # Conflicts with D212 (multi-line-summary-first-line)
]
preview = true

[tool.ruff.lint.pylint]
max-args = 6