[project]
name = "particled"
version = "0.9.0"
description = "A Black on White Sound-Interactive Particle Visualiser"
authors = [{ name = "Alaa", email = "self@alaa.sh" }]
readme = "README.md"
license = "MIT"
requires-python = ">=3.13,<4.0"
keywords = ["audio", "visualizer", "particles", "opengl", "realtime"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Multimedia :: Sound/Audio",
]
dependencies = [
    "numpy (>=2.3.5,<3.0.0)",
    "sounddevice (>=0.5.3,<0.6.0)",
    "inquirerpy (>=0.3.4,<0.4.0)",
    "glfw (>=2.7.0,<3.0.0)",
    "pillow (>=11.0.0,<12.0.0)",
    "moderngl (>=5.12.0,<6.0.0)",
    "imgui-bundle (>=1.92.700,<2.0.0)",
    "pyopengl (>=3.1.10,<4.0.0)",
]

[project.urls]
Homepage = "https://github.com/crafted-glitches/particled"
Repository = "https://github.com/crafted-glitches/particled"
Issues = "https://github.com/crafted-glitches/particled/issues"
Changelog = "https://github.com/crafted-glitches/particled/blob/main/CHANGELOG.md"

[project.scripts]
particled = "particled.app:main"

[dependency-groups]
dev = [
    "ruff (>=0.14.8,<0.15.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)",
    "mypy (>=1.18.0,<2.0.0)",
    "build (>=1.2.2,<2.0.0)",
    "twine (>=6.1.0,<7.0.0)",
    "pre-commit (>=4.5.0,<5.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
select = [
    "D",    # docstring conventions
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "PL",   # PyLint
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "PERF", # perflint
    "RUF",  # ruff-specific
]
ignore = [
    "D203",  # Conflicts with D211 (no-blank-line-before-class)
    "D213",  # Conflicts with D212 (multi-line-summary-first-line)
]
preview = true

[tool.ruff.lint.pylint]
max-args = 6

[tool.pytest.ini_options]
addopts = "--cov=particled --cov-report=term-missing --cov-fail-under=25"

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
warn_return_any = false
warn_unused_configs = true